Default fill behavior if data is empty or not a list

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 128,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 129,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 130,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "4  gene_4  0.058704  sample_0  149            8          141"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,19 +449,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 131,
    "id": "b02b5fef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
-      "  warnings.warn(f\"Loading existing data pkl file\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists('data'):\n",
     "    os.mkdir('data')\n",
@@ -490,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 132,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -500,7 +491,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 133,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -637,7 +628,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 134,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -681,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 135,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -692,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 136,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -760,7 +751,7 @@
        "sample_4           "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 143,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -822,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 144,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -858,7 +849,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_0</td>\n",
-       "      <td>2022-11-29 11:30:47.960832</td>\n",
+       "      <td>2022-11-29 12:34:47.571339</td>\n",
+       "      <td>./data/example_reviewer_data.pkl</td>\n",
+       "      <td>Testing</td>\n",
+       "      <td>Keep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sample_0</td>\n",
+       "      <td>2022-11-29 12:34:54.875466</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
        "      <td>Nothing to say</td>\n",
        "      <td>Remove</td>\n",
@@ -866,25 +865,25 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_2</td>\n",
-       "      <td>2022-11-29 11:30:53.258246</td>\n",
+       "      <td>2022-11-29 12:35:03.489073</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>sdf</td>\n",
+       "      <td></td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_4</td>\n",
-       "      <td>2022-11-29 11:30:58.477319</td>\n",
+       "      <td>2022-11-29 12:35:06.821886</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Testing</td>\n",
+       "      <td></td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sample_8</td>\n",
-       "      <td>2022-11-29 11:31:04.806890</td>\n",
+       "      <td>sample_3</td>\n",
+       "      <td>2022-11-29 12:35:09.925119</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Testing 2</td>\n",
+       "      <td></td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -893,19 +892,21 @@
       ],
       "text/plain": [
        "      index                  timestamp                    source_data_fn  \\\n",
-       "0  sample_0 2022-11-29 11:30:47.960832  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_2 2022-11-29 11:30:53.258246  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_4 2022-11-29 11:30:58.477319  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_8 2022-11-29 11:31:04.806890  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_0 2022-11-29 12:34:47.571339  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_0 2022-11-29 12:34:54.875466  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_2 2022-11-29 12:35:03.489073  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_4 2022-11-29 12:35:06.821886  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_3 2022-11-29 12:35:09.925119  ./data/example_reviewer_data.pkl   \n",
        "\n",
        "            Notes    Flag  \n",
+       "0         Testing    Keep  \n",
        "0  Nothing to say  Remove  \n",
-       "0             sdf  Remove  \n",
-       "0         Testing  Remove  \n",
-       "0       Testing 2  Remove  "
+       "0                  Remove  \n",
+       "0                  Remove  \n",
+       "0                  Remove  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 145,
    "id": "725efe31",
    "metadata": {},
    "outputs": [],
@@ -962,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 146,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -982,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 147,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -990,7 +991,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sample_0', 'sample_2', 'sample_4', 'sample_8']\n"
+      "['sample_0', 'sample_2', 'sample_3', 'sample_4']\n"
      ]
     }
    ],
@@ -1031,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 148,
    "id": "bcaac9d1",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 149,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1093,17 +1094,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td>sdf</td>\n",
+       "      <td></td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_3</th>\n",
+       "      <td></td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
-       "      <td>Testing</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_8</th>\n",
-       "      <td>Testing 2</td>\n",
+       "      <td></td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1113,12 +1114,12 @@
       "text/plain": [
        "                   Notes    Flag\n",
        "sample_0  Nothing to say  Remove\n",
-       "sample_2             sdf  Remove\n",
-       "sample_4         Testing  Remove\n",
-       "sample_8       Testing 2  Remove"
+       "sample_2                  Remove\n",
+       "sample_3                  Remove\n",
+       "sample_4                  Remove"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 150,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 151,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1217,7 +1218,7 @@
        "1  Anthracycline  remission       225"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 152,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 161,
    "id": "e4e7972d",
    "metadata": {},
    "outputs": [],
@@ -1277,7 +1278,7 @@
     "    review_data_annotation=DataAnnotation(\n",
     "        annot_value_type='string', \n",
     "        options=['Keep', 'Remove', 'Unsure'], \n",
-    "        default='Keep'\n",
+    "        default='Unsure'\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1287,7 +1288,7 @@
     "    review_data_annotation=DataAnnotation(\n",
     "        annot_value_type='string', \n",
     "        options=['Confident', 'Unsure'], \n",
-    "        default='other'\n",
+    "        default='Confident'\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1311,7 +1312,8 @@
     "    annot_name='Test', \n",
     "    review_data_annotation=DataAnnotation(\n",
     "        annot_value_type='multi', \n",
-    "        options=['1', '2', '3']\n",
+    "        options=['1', '2', '3'],\n",
+    "        default=['1', '2']\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1319,7 +1321,8 @@
     "    annot_name='A number', \n",
     "    review_data_annotation=DataAnnotation(\n",
     "        annot_value_type='float', \n",
-    "        options=[1, 2, 3, 4]\n",
+    "        options=[1, 2, 3, 4],\n",
+    "        default=3\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1369,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 162,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1391,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 164,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 165,
    "id": "c7c137a8-a740-47b7-bf3b-c13e4e8dea27",
    "metadata": {},
    "outputs": [
@@ -1448,35 +1451,35 @@
        "      <th>sample_0</th>\n",
        "      <td>Nothing to say</td>\n",
        "      <td>Remove</td>\n",
+       "      <td>Confident</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>[1, 2]</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td>sdf</td>\n",
+       "      <td></td>\n",
        "      <td>Remove</td>\n",
+       "      <td>Unsure</td>\n",
+       "      <td>green</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>[3, 2]</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sample_3</th>\n",
+       "      <td></td>\n",
+       "      <td>Remove</td>\n",
+       "      <td>Confident</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>[]</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
-       "      <td>Testing</td>\n",
-       "      <td>Remove</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_8</th>\n",
-       "      <td>Testing 2</td>\n",
        "      <td>Remove</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1489,22 +1492,32 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Notes    Flag Confidence Histogram color Test number Test  \\\n",
-       "sample_0  Nothing to say  Remove                                               \n",
-       "sample_2             sdf  Remove                                               \n",
-       "sample_4         Testing  Remove                                               \n",
-       "sample_8       Testing 2  Remove                                               \n",
+       "                   Notes    Flag Confidence Histogram color Test number  \\\n",
+       "sample_0  Nothing to say  Remove  Confident                               \n",
+       "sample_2                  Remove     Unsure           green               \n",
+       "sample_3                  Remove  Confident                               \n",
+       "sample_4                  Remove                                          \n",
        "\n",
-       "          A number  \n",
-       "sample_0       NaN  \n",
-       "sample_2       NaN  \n",
-       "sample_4       NaN  \n",
-       "sample_8       NaN  "
+       "            Test  A number  \n",
+       "sample_0  [1, 2]       3.0  \n",
+       "sample_2  [3, 2]       NaN  \n",
+       "sample_3      []       3.0  \n",
+       "sample_4               NaN  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/opt/anaconda3/envs/test_JupyterReviewer_pypi/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3162: VisibleDeprecationWarning:\n",
+      "\n",
+      "Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -1521,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 166,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
@@ -1530,16 +1543,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8050/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/opt/anaconda3/envs/test_JupyterReviewer_pypi/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3162: VisibleDeprecationWarning:\n",
-      "\n",
-      "Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "\n"
      ]
     }
    ],
