Revert fix, enforce more restrictions on annotation types, and update types for existing annotations

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 349,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 350,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 351,
    "id": "bcaac9d1",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 352,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1119,7 @@
        "sample_4                  Remove"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 353,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 354,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "1  Anthracycline  remission       225"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 355,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1263,15 +1263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "e4e7972d",
+   "execution_count": 356,
+   "id": "b89c3fea-2afd-4075-a473-e8a85fcc7f5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from JupyterReviewer.Data import DataAnnotation\n",
     "import numpy as np\n",
-    "my_reviewer_2.set_default_review_data_annotations_configuration() # sets both annotation columns and display\n",
-    "\n",
+    "my_reviewer_2.set_default_review_data_annotations_configuration() # sets both annotation columns and display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e7972d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "my_reviewer_2.add_review_data_annotation(\n",
     "    annot_name='Flag', \n",
@@ -1300,32 +1308,6 @@
     "    )\n",
     ")\n",
     "\n",
-    "my_reviewer_2.add_review_data_annotation(\n",
-    "    annot_name='Test number', \n",
-    "    review_data_annotation=DataAnnotation(\n",
-    "        annot_value_type='string', \n",
-    "        options=['1', '3', '5'],\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "my_reviewer_2.add_review_data_annotation(\n",
-    "    annot_name='Test', \n",
-    "    review_data_annotation=DataAnnotation(\n",
-    "        annot_value_type='multi', \n",
-    "        options=['1', '2', '3'],\n",
-    "        default=['1', '2']\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "my_reviewer_2.add_review_data_annotation(\n",
-    "    annot_name='A number', \n",
-    "    review_data_annotation=DataAnnotation(\n",
-    "        annot_value_type='float', \n",
-    "        options=[1, 2, 3, 4],\n",
-    "        default=3\n",
-    "    )\n",
-    ")\n",
-    "\n",
     "# Specify display type for additional annotation\n",
     "my_reviewer_2.add_review_data_annotations_app_display(\n",
     "    annot_name='Confidence', \n",
@@ -1333,20 +1315,61 @@
     "my_reviewer_2.add_review_data_annotations_app_display(\n",
     "    annot_name='Histogram color', \n",
     "    app_display_type='select')\n",
-    "my_reviewer_2.add_review_data_annotations_app_display(\n",
-    "    annot_name='Test number', \n",
-    "    app_display_type='select')\n",
-    "my_reviewer_2.add_review_data_annotations_app_display(\n",
-    "    annot_name='Test', \n",
-    "    app_display_type='checklist')\n",
-    "my_reviewer_2.add_review_data_annotations_app_display(\n",
-    "    annot_name='A number', \n",
-    "    app_display_type='number')\n",
     "\n",
-    "# Edit 'Notes' annotation to be displayed with 'text' instead of 'textarea'\n",
-    "my_reviewer_2.add_review_data_annotations_app_display(\n",
-    "    annot_name='Notes', \n",
-    "    app_display_type='text')\n"
+    "# ### See step 6.1\n",
+    "# my_reviewer_2.add_review_data_annotation(\n",
+    "#     annot_name='Test number', \n",
+    "#     review_data_annotation=DataAnnotation(\n",
+    "#         annot_value_type='string', \n",
+    "#         options=['1', '3', '5'],\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# my_reviewer_2.add_review_data_annotation(\n",
+    "#     annot_name='Test', \n",
+    "#     review_data_annotation=DataAnnotation(\n",
+    "#         annot_value_type='multi', \n",
+    "#         options=['1', '2', '3', '4'],\n",
+    "#         default=['1', '2']\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# my_reviewer_2.add_review_data_annotation(\n",
+    "#     annot_name='A number', \n",
+    "#     review_data_annotation=DataAnnotation(\n",
+    "#         annot_value_type='float', \n",
+    "#         options=[1, 2, 3, 4],\n",
+    "#         default=3\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# my_reviewer_2.add_review_data_annotation(\n",
+    "#     annot_name='Another annotation', \n",
+    "#     review_data_annotation=DataAnnotation(\n",
+    "#         annot_value_type='string', \n",
+    "#         options=['A', 'B', 'C'],\n",
+    "#         default='C'\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "#     annot_name='Test number', \n",
+    "#     app_display_type='select')\n",
+    "# my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "#     annot_name='Test', \n",
+    "#     app_display_type='checklist')\n",
+    "# my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "#     annot_name='A number', \n",
+    "#     app_display_type='number')\n",
+    "\n",
+    "# my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "#     annot_name='Another annotation', \n",
+    "#     app_display_type='select')\n",
+    "\n",
+    "# ### Edit 'Notes' annotation to be displayed with 'text' instead of 'textarea'\n",
+    "# my_reviewer_2.add_review_data_annotations_app_display(\n",
+    "#     annot_name='Notes', \n",
+    "#     app_display_type='text')\n"
    ]
   },
   {
@@ -1372,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 358,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1394,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 363,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1411,120 +1434,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 165,
-   "id": "c7c137a8-a740-47b7-bf3b-c13e4e8dea27",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Notes</th>\n",
-       "      <th>Flag</th>\n",
-       "      <th>Confidence</th>\n",
-       "      <th>Histogram color</th>\n",
-       "      <th>Test number</th>\n",
-       "      <th>Test</th>\n",
-       "      <th>A number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>sample_0</th>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
-       "      <td>Confident</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>[1, 2]</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_2</th>\n",
-       "      <td></td>\n",
-       "      <td>Remove</td>\n",
-       "      <td>Unsure</td>\n",
-       "      <td>green</td>\n",
-       "      <td></td>\n",
-       "      <td>[3, 2]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_3</th>\n",
-       "      <td></td>\n",
-       "      <td>Remove</td>\n",
-       "      <td>Confident</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sample_4</th>\n",
-       "      <td></td>\n",
-       "      <td>Remove</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Notes    Flag Confidence Histogram color Test number  \\\n",
-       "sample_0  Nothing to say  Remove  Confident                               \n",
-       "sample_2                  Remove     Unsure           green               \n",
-       "sample_3                  Remove  Confident                               \n",
-       "sample_4                  Remove                                          \n",
-       "\n",
-       "            Test  A number  \n",
-       "sample_0  [1, 2]       3.0  \n",
-       "sample_2  [3, 2]       NaN  \n",
-       "sample_3      []       3.0  \n",
-       "sample_4               NaN  "
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/opt/anaconda3/envs/test_JupyterReviewer_pypi/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3162: VisibleDeprecationWarning:\n",
-      "\n",
-      "Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_reviewer_2.get_annot()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "33f385c2-4f11-4a2a-88e3-2e90d8aaae73",
    "metadata": {},
@@ -1534,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 368,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
@@ -1560,6 +1469,20 @@
     "Select a sample from the dropdown and change the color of the histogram. \n",
     "\n",
     "Then, go back up to the annotaiton panel and press the `Mut val` button. This should autofill the `Histogram color` input to the same color you selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee21e69-6249-4fc1-b842-1b55f806fc96",
+   "metadata": {},
+   "source": [
+    "### 6.1 Add more annotation columns\n",
+    "\n",
+    "Go back to step 5 and uncomment the new annotations. Run the cell, and rerun step 6. You should see that the new columns and options are included in the dashboard.\n",
+    "\n",
+    "You can also change or update some of the annotation parameters of existing annotations. For example, you may add more valid options for one of your annotations.\n",
+    "\n",
+    "**NOTE**: Once those annotations are added, they will stay. If you already made annotations and you change the data type or valid values afterwards, the reviewer will check that existing values are valid. If not, you will not be able to make those changes to the configuration."
    ]
   },
   {
