suppress visible deprecation warning from inserting a list into a pandas dataframe

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "4  gene_4  0.058704  sample_0  149            8          141"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 30,
    "id": "b02b5fef",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 31,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 32,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 33,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 34,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 35,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "sample_4           "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -849,42 +849,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sample_0</td>\n",
-       "      <td>2022-11-29 12:34:47.571339</td>\n",
+       "      <td>2022-11-29 16:44:58.699240</td>\n",
        "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Testing</td>\n",
+       "      <td>My notes</td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sample_1</td>\n",
+       "      <td>2022-11-29 16:45:14.783746</td>\n",
+       "      <td>./data/example_reviewer_data.pkl</td>\n",
+       "      <td>Looks good</td>\n",
        "      <td>Keep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_0</td>\n",
-       "      <td>2022-11-29 12:34:54.875466</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_2</td>\n",
-       "      <td>2022-11-29 12:35:03.489073</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td></td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_4</td>\n",
-       "      <td>2022-11-29 12:35:06.821886</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td></td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_3</td>\n",
-       "      <td>2022-11-29 12:35:09.925119</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td></td>\n",
-       "      <td>Remove</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -892,21 +868,15 @@
       ],
       "text/plain": [
        "      index                  timestamp                    source_data_fn  \\\n",
-       "0  sample_0 2022-11-29 12:34:47.571339  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_0 2022-11-29 12:34:54.875466  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_2 2022-11-29 12:35:03.489073  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_4 2022-11-29 12:35:06.821886  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_3 2022-11-29 12:35:09.925119  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_0 2022-11-29 16:44:58.699240  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_1 2022-11-29 16:45:14.783746  ./data/example_reviewer_data.pkl   \n",
        "\n",
-       "            Notes    Flag  \n",
-       "0         Testing    Keep  \n",
-       "0  Nothing to say  Remove  \n",
-       "0                  Remove  \n",
-       "0                  Remove  \n",
-       "0                  Remove  "
+       "        Notes    Flag  \n",
+       "0    My notes  Remove  \n",
+       "0  Looks good    Keep  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 369,
    "id": "e4e7972d",
    "metadata": {},
    "outputs": [],
@@ -1503,9 +1473,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_JupyterReviewer_pypi",
+   "display_name": "annotation_fixes_JupyterReviewer",
    "language": "python",
-   "name": "test_jupyterreviewer_pypi"
+   "name": "annotation_fixes_jupyterreviewer"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1517,7 +1487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
